feat: initial public endpoint (#29)
