# backend/interface/https/openapi.yaml
@@ -479,6 +479,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /public/products/categories:
+    get:
+      summary: List product categories
+      responses:
+        '200':
+          description: Product Categories
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductCategoryListResponse'
+        '401':
+          description: Admin not authorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 components:
   schemas:
     AdminLoginRequest:
